# conan2-cuda-lib-experience

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
include/: CMakeLists.txt
include/conancudalib/: conancudalib.h
src/: CMakeLists.txt  conancudalib.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  conancudalib_test.cpp
